# atui

./: .gitignore  LICENSE  README.md  aws-tui  port-forwards.yaml  pyproject.toml
src/aws_tui/: __init__.py  app.py  aws_api.py  models.py  port_config.py  port_history.py  styles.tcss
